[FIX] Login: Left align IDRipple description text (IID-82)

--- a/src/less/ripple/tabs/authorization.less
+++ b/src/less/ripple/tabs/authorization.less
@@ -131,7 +131,7 @@
             }
         }
         .switch-mode-link-container {
-            text-align: center;
+            text-align: left;
             a {
                 text-decoration: none;
             }
